# neuralnet

./: .gitignore  CMakeLists.txt  README.md  main.cpp
example_dataset/: digits.tra
neural_net_lib/: CMakeLists.txt
neural_net_lib/inc/: eigen_serialization.h  neural_net.h
neural_net_lib/src/: neural_net.cpp
